# ccs-hack

./: Cargo.toml  LICENSE-MIT  README.md
.github/: settings.yml
benches/: bench.rs
src/: error.rs  lib.rs  plonkish.rs  tests.rs
src/ccs/: mod.rs  types.rs
src/plonkish/: mod.rs  types.rs
src/r1cs/: mod.rs  types.rs
src/types/: ccs.rs  finite_field.rs  mod.rs  plonkish.rs  r1cs.rs  utils.rs
src/types/ccs/: mod.rs
tests/: tests.rs
